[package]
name = "cnote"
version = "0.1.0"
edition = "2021"
authors = ["Al email@lostaccesslalalalalalalalala.com"]
description = "cli packet capture program, ramping up for gui"
license = "MIT"
repository = "https://github.com/sigh-gone/cnote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34.0"
pcap = "1.1.0"
chrono = "0.4.28"
# serde      = { version = "1.0.188", features = ["derive"] }
# serde_json = "1.0.107"
# libwifi    = "0.3.1"
# ieee80211       = { git = "https://github.com/SpiralP/rust-ieee80211.git", branch = "master" }
# linked-hash-map = "0.5"
iced = { version = "0.10.0", features = ["tokio", "lazy", "advanced"] }
iced_table = "0.1.0"
# crossbeam = "0.8.2"
# tokio = { version = "1", features = ["full"] }
# iced_flatlist = {git = "https://github.com/luizvidoto/iced-flatlist.git", branch = "master"}

[profile.release]
debug = true
