[package]
name        = "cnote"
version     = "0.1.0"
edition     = "2021"
authors     = ["Al email@lostaccesslalalalalalalalala.com"]
description = "cli packet capture program, ramping up for gui"
license     = "MIT"
repository  = "https://github.com/sigh-gone/cnote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet        = "0.34.0"
pcap        = "1.1.0"
chrono      = "0.4.28"
log         = { version = "0.4", features = ["std"] }
eframe      = "0.23.0"
egui_extras = "0.23.0"
egui_plot   = "0.23.0"
# libwifi    = "0.3.1"
# ieee80211       = { git = "https://github.com/SpiralP/rust-ieee80211.git", branch = "master" }
egui       = "0.23.0"
egui_tiles = "0.3.1"
trust-dns-proto = "0.23.2" 
rfd = "0.12.1"

[profile.release]
debug = true
